--- a/public/flextop/css/style.css
+++ b/public/flextop/css/style.css
@@ -17,7 +17,8 @@ body{ background:#fff; border:0; font: 13px 'Rubik', Arial, Helvetica, sans-seri
 
 #main{margin: 0 auto; position: relative; overflow: hidden;}
 
-.top{position: relative; background: #156192; color: #fff; z-index: 50;}
+.top{position: relative; background: #156192; color: #fff; z-index: 50;padding-right: 223px;
+    padding-left: 15px;}
 
 .main-content{position: relative; z-index: 10;}
 .main-content-overlay{position: fixed; width: 100%; height: 100%; background: #000; background: rgba(0, 0, 0, 0.8); z-index: 99; left: 0; top: 0; display: none;}
@@ -90,7 +91,7 @@ transition: all 0.3s ease-out; -moz-transition: all 0.3s ease-out; -webkit-trans
 
 .top1 a:hover{text-decoration: underline;}*/
 
-.hello1{float: right; padding-top: 20px; position: relative; width: auto;}
+.hello1{float: left; padding-top: 20px; position: relative; width: auto; margin-left: -22px;}
 .hello1 a{color: #febf00; text-decoration: none;}
 /*.top1_wrapper.v2 .hello1 a{color: #156192;}*/
 
@@ -181,7 +182,7 @@ transition: all 0.3s ease-out; -moz-transition: all 0.3s ease-out; -webkit-trans
 .currency1 .dropdown-menu a{display: block; font-size: 13px; line-height: 20px; padding: 4px 10px 4px 27px; color: #156192; text-decoration: none;}
 .currency1 .dropdown-menu a:hover{background: #2d719d; color: #fff;}
 
-.top2_wrapper{border-bottom: 0px solid #2d719d;}
+.top2_wrapper{border-bottom: 0px solid #2d719d; height: 64px;margin-top: -6px;}
 .top2_wrapper.v2{background: #fff; border-bottom-color: #fff; color: #333e48;}
 
 .top2{position: relative; padding: 0px 0;}
@@ -193,7 +194,7 @@ header{float: left;}
 
 .hotline1 .txt1{font-weight: 500;}
 
-.search_section_wrapper{width: 500px; height: 29px; float: left; background: #fff;  margin-top: 14px; border-radius:25px; -moz-border-radius:25px; -webkit-border-radius:25px; padding-left: 170px; position: relative; color: #333e48;}
+.search_section_wrapper{width: 450px; height: 29px; float: left; background: #fff;  margin-top: 14px; border-radius:25px; -moz-border-radius:25px; -webkit-border-radius:25px; padding-left: 170px; position: relative; color: #333e48; margin-left: 24px;}
 .top2_wrapper.v2 .search_section_wrapper{border: 2px solid #156192;}
 
 /*.all_categories1{display: block; vertical-align: top; border-right: 1px solid #e5e6e7; padding-right: 20px; margin-right: 0px; position: absolute; left: 0; top: 12px; width: 170px;}*/
@@ -320,7 +321,7 @@ header{float: left;}
 .breadcrumbs1 span{display: inline-block; margin: 0 10px;}
 .breadcrumbs1 span:after{ content: "\f105"; font-family: 'FontAwesome'; display: inline-block;}
 
-.sidebar-block{margin-bottom: 40px;}
+.sidebar-block{margin-bottom: 40px; width: 200px;}
 .sidebar-title{margin-bottom: 30px; border-bottom: 1px solid #ebebeb; font-size: 18px; font-weight: 500; padding-bottom: 10px;}
 
 .ul1{display: block; padding: 0; margin: 0; list-style: none;}
@@ -711,6 +712,7 @@ transition: all 1s ease-in-out; -moz-transition: all 0.3s ease-out; -webkit-tran
 .product-sale{background: #e53939;}
 .product-new{background: #4495dd;}
 .product-media{position: relative; margin-bottom: 10px; overflow: hidden;}
+.product-media:hover {margin-left: -15px;}
 .product-view{display: block;text-decoration: none;}
 .product-media img{width: 100%;}
 .product-links{position: absolute; width: 100%; left: 0; bottom: 50px; text-align: center; opacity: 0; filter: alpha(opacity=0);
@@ -905,9 +907,9 @@ transition: all 0.3s ease-out; -moz-transition: all 0.3s ease-out; -webkit-trans
 .navbar_ .navbar-toggle .icon-bar{background: #fff;}
 .navbar-collapse_{padding-left: 0; padding-right: 0; border: none;}
 .navbar_ .nav{position: static; margin: 0; padding: 0; display: -webkit-box; float: none;}
-.navbar_ .nav > li{display: block; float: left; white-space: nowrap; background: none; margin-left: 30px; /*background: url(../images/menu_bg.png) left center no-repeat;*/ padding-left: 30px; position: static;}
-.navbar_ .nav > li:first-child{margin-left: 0; padding-left: 0; background: none;}
-.navbar_ .nav > li > a{display: block; text-decoration: none; background: none; font-family: 'Rubik'; font-weight: normal; font-size: 16px; line-height: 10px; color: #fff; text-shadow:none; padding: 10px 2px; border: none; margin: 0; text-align: left; position: relative; z-index: 2;
+.navbar_ .nav > li{display: block; float: left; white-space: nowrap; background: none; margin-left: 10px; /*background: url(../images/menu_bg.png) left center no-repeat;*/ padding-left: 30px; position: static;}
+.navbar_ .nav > li:first-child{margin-left: 79px; padding-left: 0; background: none;}
+.navbar_ .nav > li > a{display: block; text-decoration: none; background: none; font-family: 'Rubik'; font-weight: normal; font-size: 14px; line-height: 10px; color: #fff; text-shadow:none; padding: 10px 2px; border: none; margin: 0; text-align: left; position: relative; z-index: 2;
 transition: all 0.3s ease-out; -moz-transition: all 0.3s ease-out; -webkit-transition: all 0.3s ease-out; -o-transition: all 0.3s ease-out;
 }
 
@@ -1495,5 +1497,6 @@ transition: all 0.3s ease-out; -moz-transition: all 0.3s ease-out; -webkit-trans
 }
 
 
-.top3_wrapper{border-top: 1px solid #eaeaea21;}
-.brandscroll{background-color: white; width:150px; height: 100px; overflow-y: scroll;}
+.top3_wrapper{border-top: 1px solid #eaeaea21; padding-left: 74px;}
+.brandscroll{background-color: white; width:200px; height: 100px; overflow-y: scroll;}
+
